--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Escolha Seu Pastel - Cantinho do Pastel</title>
+    <title>Cantinho do Pastel</title>
     <link rel="stylesheet" href="style/pastel.css" />
     <script src="script.js" defer></script>
   </head>
@@ -13,7 +13,7 @@
     </header>
 
     <main class="container">
-      <h1>Escolha Seu Pastel</h1>
+      <h1>Escolha e Monte Seu Pastel</h1>
       <section class="pastel-options">
         <button class="image-button" onclick="openModal('modal1')">
           <img src="img/Pastel rs9,00.png" alt="Imagem de Pastel 1" />
