--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cantinho do Pastel</title>
+    <title>Escolha Seu Pastel - Cantinho do Pastel</title>
     <link rel="stylesheet" href="style/pastel.css" />
     <script src="script.js" defer></script>
+    <!-- Cor da barra de status no Android -->
+    <meta name="theme-color" content="#ab0100" />
+    <!-- Cor da barra de navegação no iOS -->
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
   </head>
   <body>
     <header>
@@ -13,7 +20,7 @@
     </header>
 
     <main class="container">
-      <h1>Escolha e Monte Seu Pastel</h1>
+      <h1>Escolha e Monte o Seu Pastel !</h1>
       <section class="pastel-options">
         <button class="image-button" onclick="openModal('modal1')">
           <img src="img/Pastel rs9,00.png" alt="Imagem de Pastel 1" />
@@ -646,9 +653,8 @@
         </div>
       </div>
     </main>
-
     <footer>
-      <p>&copy; 2024 Cantinho do Pastel. Todos os direitos reservados.</p>
+      <p>&copy; 2016 Cantinho do Pastel. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
