--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
               <input
                 type="checkbox"
                 name="bebida1"
-                value="CoCa 450ML"
+                value="CoCa 350ML"
                 data-price="6.00"
               />
               CoCa 350ML - R$6,00
@@ -623,7 +623,7 @@
               <input
                 type="checkbox"
                 name="bebida1"
-                value="Antártica 450ML"
+                value="Antártica 350ML"
                 data-price="6.00"
               />
               Antártica 350ML - R$6,00
@@ -632,8 +632,8 @@
               <input
                 type="checkbox"
                 name="bebida1"
-                value="Del-Vale Laranja 350ML"
-                data-price="4.50"
+                value="Del-Vale Laranja 450ML"
+                data-price="6.00"
               />
               D.Vale Laranja 450ML - R$6,00
             </label>
@@ -641,8 +641,8 @@
               <input
                 type="checkbox"
                 name="bebida1"
-                value="Suco de Limão"
-                data-price="4.00"
+                value="Aguá"
+                data-price="2.50"
               />
               Aguá - R$2,50
             </label>
