--- a/index.html
+++ b/index.html
@@ -601,6 +601,7 @@
               />
               Coca-Cola 1L - R$9,00
             </label>
+
             <label>
               <input
                 type="checkbox"
@@ -610,24 +611,47 @@
               />
               Antártica 1L - R$9,00
             </label>
+
             <label>
               <input
                 type="checkbox"
                 name="bebida1"
-                value="CoCa 350ML"
-                data-price="6.00"
+                value="CoCa-CoLa 250ML"
+                data-price="3.50"
               />
-              CoCa 350ML - R$6,00
+              CoCa-CoLa 250ML - R$3,50
             </label>
+
             <label>
               <input
                 type="checkbox"
                 name="bebida1"
-                value="Antártica 350ML"
+                value="Antártica 250ML"
+                data-price="3.50"
+              />
+              Antártica 250ML - R$3,50
+            </label>
+
+            <label>
+              <input
+                type="checkbox"
+                name="bebida1"
+                value="CoCa-CoLa 350ML"
                 data-price="6.00"
               />
-              Antártica 350ML - R$6,00
+              CoCa-CoLa 350ML - R$6,00
             </label>
+
+            <label>
+              <input
+                type="checkbox"
+                name="bebida1"
+                value="Antártica Zero 350ML"
+                data-price="6.00"
+              />
+              Antártica Zero 350ML - R$6,00
+            </label>
+
             <label>
               <input
                 type="checkbox"
@@ -637,16 +661,18 @@
               />
               D.Vale Laranja 450ML - R$6,00
             </label>
+
             <label>
               <input
                 type="checkbox"
                 name="bebida1"
                 value="Aguá"
-                data-price="2.50"
+                data-price="2.00"
               />
-              Aguá - R$2,50
+              Aguá - R$2,00
             </label>
           </div>
+
           <button class="submit" onclick="submitBeverages('bebida1')">
             Enviar ao Carrinho
           </button>
