--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
               <input
                 type="checkbox"
                 name="bebida1"
-                value="Antártica 1L"
+                value="Guaraná Antártica 1L"
                 data-price="9.00"
               />
               Antártica 1L - R$9,00
@@ -626,7 +626,7 @@
               <input
                 type="checkbox"
                 name="bebida1"
-                value="Antártica 250ML"
+                value="Guaraná Antártica 250ML"
                 data-price="3.50"
               />
               Antártica 250ML - R$3,50
@@ -646,7 +646,7 @@
               <input
                 type="checkbox"
                 name="bebida1"
-                value="Antártica Zero 350ML"
+                value="Guaraná Antártica Zero 350ML"
                 data-price="6.00"
               />
               Antártica Zero 350ML - R$6,00
@@ -666,10 +666,10 @@
               <input
                 type="checkbox"
                 name="bebida1"
-                value="Aguá"
+                value="Aguá Mineral 500ML"
                 data-price="2.00"
               />
-              Aguá - R$2,00
+              Aguá Mineral 500ML - R$2,00
             </label>
           </div>
 
