--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/pastel.css" />
     <script src="script.js" defer></script>
     <!-- Cor da barra de status no Android -->
-    <meta name="theme-color" content="#ab0100" />
+    <meta name="theme-color" content="#570101" />
     <!-- Cor da barra de navegação no iOS -->
     <meta
       name="apple-mobile-web-app-status-bar-style"
